# Gardens-of-Eris

./: .#sonar-project.properties  Bugs.txt  CMakeLists.txt  CMakeLists.txt.orig  Diagram1.dia  Diagram1.vdx  GoE_diagrams.xmi  LICENSE  README.md  Requirements.md  build.sh  build.sh.cfg  cppcheck_project.xml  data  gardenOfEris_revised.cbp  gardenOfEris_revised.depend  gardenOfEris_revised.layout  main.cpp  opisAlgorytmuGenerującegoKomnaty.txt  sonar-project.properties  worldComposition_class_diagram.dia
.github/workflows/: c-cpp.yml  cmake.yml  codeql.yml  main.yml  msvc.yml  sonarcloud.yml  sonarcloud_main.yml
CoverageReports/: coverageReport.XML
GoEoOL/: CMakeCache.txt  Makefile  cmake_install.cmake
GoEoOL/data/: .#skins.json  proces.awk  skins,new  skins.json  skins.json.o1  skins.new
GoEoOL/data/graph/: HUD_elems.xcf  battleMachine.xcf  beetle5_spr_Sheet_.xStephen "Redshrike" Challener.txt  beetle5_spr_Sheet_.xStephen "Redshrike" Challener.xcf  icons64.xcf
GoEoOL/data/music/: readme.txt
GoEoOL/data/music/bacalao/: author.txt
GoEoOL/data/shaders/: .#pixelShader.glps  .#vertexShader.glvs  pixelShader.glps  pixelShader.glps.original_vanila
GoEoOL/data/sounds/: accessGranted.aup3  avatarActive.aup3  bomb.aup3  brainNotFound.aup3  collectKey.aup3  collectorRobotReporting.aup3  controllerFound.aup3  controllerNotFound.aup3  gunCollect.aup3  machinerySound.aup3  nioseThing.aup3  nioseThing.aup3-wal  nioseThing2.aup3  nioseThing2.aup3-wal  pancerfaust.utt  sawgun.aup3  sawgun.aup3-wal  scoutrobotreporting.aup3  shoot.aup3-wal  step.aup3  stone_sliding-54021.aup3  stone_sliding.aup3  teleport.aup3  teleporterOccupied.aup3
GoEoOL/data/txt/: stories.json  stories.pl.json  stories.ro.json
data/: skins.json  skins.json.orig
data/data/graph/: drone.xcf  hero_a.txt
data/graph/: ErisDiscordiaclr.xcf  icons64.xcf
data/levels/: millenium.json  read.me
docs/: DescriptionDoc.odt  Interactives.minder  LabirynthSpanningTree.odg  class_Diagram.dia
include/: Coords.h  audibleElement.h  bElem.h  bElemAttr.h  bElemContainer.h  bElemStats.h  bazooka.h  bazookaMissile.h  bouba.h  brickCluster.h  bunker.h  chamber.h  chamberArea.h  characterStats.h  collectible.h  commons.h  configManager.h  door.h  elemRenderer.h  elemStats.h  elementFactory.h  elements.h  explosives.h  eyeCandyManager.h  floorElement.h  gCollect.h  goldenApple.h  hudManager.h  inputManager.h  inventory.h  key.h  kiki.h  killableElements.h  levelLoader.h  mechanical.h  menuScreen.h  monster.h  monsterBrain.h  movableElements.h  musicElement.h  (+24 more)
src/: Coords.cpp  audibleElement.cpp  bElem.cpp  bElemAttr.cpp  bElemContainer.cpp  bElemStats.cpp  bazooka.cpp  bazookaMissile.cpp  bouba.cpp  brickCluster.cpp  bunker.cpp  chamber.cpp  chamberArea.cpp  characterStats.cpp  collectible.cpp  configManager.cpp  door.cpp  elemRenderer.cpp  elemStats.cpp  elementFactory.cpp  explosives.cpp  eyeCandyManager.cpp  floorElement.cpp  gCollect.cpp  glad.c  goldenApple.cpp  hudManager.cpp  inputManager.cpp  inventory.cpp  key.cpp  kiki.cpp  killableElements.cpp  levelLoader.cpp  mechanical.cpp  menuScreen.cpp  monster.cpp  monsterBrain.cpp  movableElements.cpp  musicElement.cpp  nonSteppable.cpp  (+22 more)
tools/joystiick/: b.sh  joytest  joytest.cpp
unitTests/: bElem-test.cpp  chamberArea-test.cpp  goldenApple-test.cpp  guns-test.cpp  player-test.cpp  stackedElement-test.cpp  stackedElement-test.cpp.disabled  teleport-test.cpp  viewPoint-tests.cpp
